# drift_guard_mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  README_DOCKER.md  docker-compose.yml  pyproject.toml
.github/workflows/: lambic-drift-guard.yml  repo-contract.yml
docs/: codex_rules.md  dev_edge.md  hosting.md  repo_contract.md  v2_contract.json
ops/: exposure.yml
scripts/: check_repo_contract.py  lint_edge_contract.py  smoke.sh
src/drift_guard/: server.py
