[project]
name = "drift-guard-mcp"
version = "0.1.0"
description = "Minimal MCP server to enforce repo contract + drift checks + verification for AI-first engineering."
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.0.0",
]

[project.scripts]
drift-guard-mcp = "drift_guard.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drift_guard"]
